during the fourth part of reforge (jokes UI in final form)

--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -40,8 +40,8 @@
                             <li>
                                 <a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementJokes}}</a>
                                 <ul class="d-menu" data-role="dropdown">
-                                    <li><a href="#/managementJokes">{{translation.ManagementJokes}}</a></li>
-                                    <li><a href="#/managementJokeCategories">{{translation.ManagementJokeCategories}}</a></li>
+                                    <li><a href="#/jokeManagement">{{translation.ManagementJokes}}</a></li>
+                                    <li><a href="#/jokeCategoryManagement">{{translation.ManagementJokeCategories}}</a></li>
                                 </ul>
                             </li>
                             <li>
