--- a/WebBellwether.Web/app/jokes/jokes.html
+++ b/WebBellwether.Web/app/jokes/jokes.html
@@ -4,7 +4,7 @@
         <div ng-repeat="joke in filtered = (jokes | filter:search | startFrom:(currentPage -1)*entryLimit | limitTo:entryLimit)">
             <div class="animatedParent col-md-12" style="margin-bottom: 60px" >
                 <h3 class="animated lightSpeedInLeft go">
-                    {{joke.jokeContent}}
+                    {{joke.JokeContent}}
                 </h3>           
             </div>
         </div>
