fourth part of reforge finished . I have enough ...

--- a/WebBellwether.Web/app/home/header.html
+++ b/WebBellwether.Web/app/home/header.html
@@ -33,8 +33,8 @@
                             <li>
                                 <a href="" style="color:#ffffff !important;" class="dropdown-toggle">{{translation.ManagementGames}}</a>
                                 <ul class="d-menu" data-role="dropdown">
-                                    <li><a href="#/managementIntegrationGames">{{translation.ManagementGames}}</a></li>
-                                    <li><a href="#/editGameFeatures">{{translation.ManagementIntegrationGameFeatures}}</a></li>
+                                    <li><a href="#/managementIntegrationGame">{{translation.ManagementGames}}</a></li>
+                                    <li><a href="#/gameFeatureManagement">{{translation.ManagementIntegrationGameFeatures}}</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -45,10 +45,10 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="#/managementLanguages">{{translation.ManagementLanguages}}</a>
+                                <a href="#/languageManagement">{{translation.ManagementLanguages}}</a>
                             </li>
                             <li>
-                                <a href="#/managementVersions">{{translation.ManagementVersions}}</a>
+                                <a href="#/versionManagement">{{translation.ManagementVersions}}</a>
                             </li>
                             <li>
                                 <a href="#/tokens">{{translation.ManagementAccounts}}</a>
