--- a/WebBellwether.Web/app/home/home.html
+++ b/WebBellwether.Web/app/home/home.html
@@ -1,6 +1,6 @@
 ﻿<div class="tile-container zIndex2">
     <!--Games-->
-    <a href="#/games">
+    <a href="#/game">
         <div class="tile-large fg-white bg-transparent" data-role="tile">
             <div class="tile-content slide-down-2 ">
                 <div class="slide">
@@ -123,7 +123,7 @@
     </div>
 
     <!--JOKES-->
-    <a href="#/jokes">
+    <a href="#/joke">
         <div class="tile-large fg-white" data-role="tile">
             <div class="tile-content slide-down">
                 <div class="slide">
