--- a/WebBellwether.Web/index.html
+++ b/WebBellwether.Web/index.html
@@ -82,10 +82,10 @@
     <script src="app/authorizations/tokensManagerService.js"></script>
     <script src="app/translations/translationService.js"></script>
     <script src="app/home/sharedService.js"></script>
-    <script src="app/integrationGames/integrationGamesService.js"></script>
+    <script src="app/integrationGames/integrationGameService.js"></script>
     <script src="app/translations/translateService.js"></script>
-    <script src="app/jokes/jokesService.js"></script>
-    <script src="app/languages/languagesService.js"></script>
+    <script src="app/jokes/jokeService.js"></script>
+    <script src="app/languages/languageService.js"></script>
     <script src="app/versions/versionsService.js"></script>
     <!-- Load controllers -->
     <script src="app/home/indexController.js"></script>
@@ -97,18 +97,18 @@
     <script src="app/authorizations/associateController.js"></script>
     <script src="app/translations/translationController.js"></script>
     <script src="app/authorizations/authSwitchController.js"></script>
-    <script src="app/integrationGames/integrationGamesController.js"></script>
+    <script src="app/integrationGames/integrationGameController.js"></script>
     <script src="app/bellwether/bellwetherController.js"></script>
     <script src="app/guide/guideController.js"></script>
-    <script src="app/jokes/jokesController.js"></script>
+    <script src="app/jokes/jokeController.js"></script>
     <script src="app/photoGalleries/photoGalleryController.js"></script>
-    <script src="app/integrationGames/editGameFeaturesController.js"></script>
-    <script src="app/integrationGames/managementIntegrationGamesController.js"></script>
+    <script src="app/integrationGames/gameFeatureManagementController.js"></script>
+    <script src="app/integrationGames/integrationGameManagementController.js"></script>
     <script src="app/jokes/jokeCategoryManagementController.js"></script>
     <script src="app/jokes/jokeManagementController.js"></script>
-    <script src="app/languages/managementLanguagesController.js"></script>
+    <script src="app/languages/languageManagementController.js"></script>
     <script src="app/search/searchController.js"></script>
-    <script src="app/versions/managementVersionsController.js"></script>
+    <script src="app/versions/versionManagementController.js"></script>
 
     <!-- Load custom filters -->
     <script src="app/filters/customFilters.js"></script>
