--- a/WebBellwether.Web/app/languages/languageManagement.html
+++ b/WebBellwether.Web/app/languages/languageManagement.html
@@ -19,7 +19,7 @@
                 <form name="basicLanguageInformationEdit">
                     <div class="form-group">
                         <label>{{translation.LanguageShortName}}</label>
-                        <select class="form-control myFormColor" ng-change="translateLanguageName(languageForEdit,true)" required ng-model="languageForEdit.languageShortName" data-ng-options="sl.code as sl.language for sl in supportedLanguages">
+                        <select class="form-control myFormColor" ng-change="translateLanguageName(languageForEdit,true)" required ng-model="languageForEdit.LanguageShortName" data-ng-options="sl.Code as sl.Language for sl in supportedLanguages">
                             <option value=''>{{translation.ChooseLanguage}}</option>
                         </select>
                         <div class="margin10" style="text-align: left; font-weight: bold">
@@ -30,15 +30,15 @@
                                 <span style="color: #337ab7">{{translateServiceName}}</span>
                             </div>
                             <div>
-                                {{translation.CodeForLanguage}}{{languageForEdit.languageName}} :
-                                <span style="color: crimson">{{languageForEdit.languageShortName}}</span>    
+                                {{translation.CodeForLanguage}}{{languageForEdit.LanguageName}} :
+                                <span style="color: crimson">{{languageForEdit.LanguageShortName}}</span>    
                             </div>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label>{{translation.LanguageName}}</label>
-                        <input class="form-control myFormColor" required ng-model="languageForEdit.languageName" type="text">
+                        <input class="form-control myFormColor" required ng-model="languageForEdit.LanguageName" type="text">
                     </div>                   
 
                     <!--SAVE LANGUAGE-->
@@ -52,14 +52,14 @@
                     <div class="form-inline" style="text-align: left">
                         <label>{{translation.PublishLanguage}}</label>
                         <label class="input-control checkbox">
-                            <input data-ng-model="languageForEdit.isPublic" ng-change="publishLanguage(languageForEdit)" type="checkbox">
-                            <span data-ng-class="{true:'',false:'mif-ani-spanner'}[languageForEdit.isPublic]" class="check"></span>
+                            <input data-ng-model="languageForEdit.IsPublic" ng-change="publishLanguage(languageForEdit)" type="checkbox">
+                            <span data-ng-class="{true:'',false:'mif-ani-spanner'}[languageForEdit.IsPublic]" class="check"></span>
                         </label>
-                        <label data-ng-class="{true:'',false:'formAni'}[languageForEdit.isPublic]" ng-hide="languageForEdit.isPublic ==true">{{translation.HowToPublishLanguage}}</label>
+                        <label data-ng-class="{true:'',false:'formAni'}[languageForEdit.IsPublic]" ng-hide="languageForEdit.IsPublic ==true">{{translation.HowToPublishLanguage}}</label>
                     </div>
 
                     <!--TRANSLATE ALL KEYS-->
-                    <div class="form-group" ng-hide="languageForEdit.id == selectedLanguage">
+                    <div class="form-group" ng-hide="languageForEdit.Id == selectedLanguage">
                         <label>{{translation.TranslateAllLanguageKeys}}</label>
                         <button ng-click="translateAllLanguageKeysDialog()"  class="btn btn-primary btn-block formAni"><span class="mif-cloud-download mif-2x"> {{translation.Translate}}</span></button>
                     </div>
@@ -80,7 +80,7 @@
                 <form name="basicLanguageInformationNew">
                     <div class="form-group">
                         <label>{{translation.LanguageShortName}}</label>
-                        <select class="form-control myFormColor" ng-change="translateLanguageName(newLanguage,false)" required ng-model="newLanguage.languageShortName" data-ng-options="sl.Code as sl.Language for sl in supportedLanguages">
+                        <select class="form-control myFormColor" ng-change="translateLanguageName(newLanguage,false)" required ng-model="newLanguage.LanguageShortName" data-ng-options="sl.Code as sl.Language for sl in supportedLanguages">
                             <option value=''>{{translation.ChooseLanguage}}</option>
                         </select>
                         <div class="margin10" style="text-align: left; font-weight: bold">
@@ -99,7 +99,7 @@
 
                     <div class="form-group">
                         <label>{{translation.LanguageName}}</label>
-                        <input class="form-control myFormColor" required ng-model="newLanguage.languageName" type="text">
+                        <input class="form-control myFormColor" required ng-model="newLanguage.LanguageName" type="text">
                     </div>
 
                     <!--SAVE LANGUAGE-->
@@ -112,16 +112,16 @@
     </div>
     <!--LANGUAGES DICTIONARY FOR EDIT-->
     <div ng-hide="newLanguageOption == true">
-        <div class="row myFormColorWithBorder" ng-repeat-start="slc in selectedLanguageContent | filter:searchImput | startFrom:currentPage*pageSize | limitTo:pageSize" ng-class-odd="'alt'" ng-class="{selectedTransparentWithBorder_hover : hover || activeLanguageKey == slc.key }" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
+        <div class="row myFormColorWithBorder" ng-repeat-start="slc in selectedLanguageContent | filter:searchImput | startFrom:currentPage*pageSize | limitTo:pageSize" ng-class-odd="'alt'" ng-class="{selectedTransparentWithBorder_hover : hover || activeLanguageKey == slc.Key }" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
             <div class="col-md-9 col-md-push-3">
                 <div class="margin10">
-                    <input type="text" class="form-control myFormColorImput" required data-ng-model="slc.value"/>
+                    <input type="text" class="form-control myFormColorImput" required data-ng-model="slc.Value"/>
                 </div>
             </div>
             <div class="col-md-3 col-md-pull-9" ng-click="setActiveLanguageKey(slc)">
                 <div class="margin10">
                     <div style="-ms-word-break: break-all; word-break: break-all;">
-                        <label class="text-primary"><span class="mif-key"> {{slc.key}}</span></label>
+                        <label class="text-primary"><span class="mif-key"> {{slc.Key}}</span></label>
                     </div>
                 </div>
             </div>
@@ -130,24 +130,24 @@
         <!--tutaj wystepuje spory problem zwiazany ze zmiana stron (odpala sie zawsze ng-show co jest zle ...) sposob na to : ng-class="{true:'slide-toggle',false:''}[activeLanguageKey == slc.key]"
         ale również nei działa dobrze bo dradze ng-hide gdy robie select na inym obiekcie kurwa mac ...-->
         <!--musze tutaj wymyslic jakas blokade np zeby pokazal całość gdy ta bedzie juz gotowa ale nie za pomoca ng-show ...-->
-        <div class="row slide-toggle" ng-repeat-end="" data-ng-hide="activeLanguageKey != slc.key" ng-class-odd="'alt'">
+        <div class="row slide-toggle" ng-repeat-end="" data-ng-hide="activeLanguageKey != slc.Key" ng-class-odd="'alt'">
             <div class="col-md-9 col-md-push-3">
-                <div class="margin10" ng-hide="languageForEdit.id == selectedLanguage">
+                <div class="margin10" ng-hide="languageForEdit.Id == selectedLanguage">
                     <div class="block  margin10">
                         {{translation.MainLanguageTranslation}}
                     </div>
                     <!--HERE I TAKE TRANSLATION FOR MAIN LANGUAGE-->
                     <div class="block" style="font-weight: bold;">
-                        {{translation[slc.key]}}
+                        {{translation[slc.Key]}}
                     </div>
                 </div>
             </div>
             <div class="col-md-3 col-md-pull-9">
                 <div class="margin10">
                     <!--TRANSLATE LANGUAGE KEY-->
-                    <button ng-click="translateLanguageKey(selectedLanguage,languageForEdit.languageShortName,translation[slc.key],slc.key)" ng-hide="languageForEdit.id == selectedLanguage" class="btn btn-primary btn-block"><span class="mif-cloud-download mif-2x"> {{translation.Translate}}</span></button>
+                    <button ng-click="translateLanguageKey(selectedLanguage,languageForEdit.LanguageShortName,translation[slc.Key],slc.Key)" ng-hide="languageForEdit.Id == selectedLanguage" class="btn btn-primary btn-block"><span class="mif-cloud-download mif-2x"> {{translation.Translate}}</span></button>
                     <!--SAVE LANGUAGE KEY-->
-                    <button class="btn btn-default btn-block" ng-disabled="slc.value == null" ng-click="editLanguageKey(slc,languageForEdit)"><span class="mif-plus"> {{translation.Save}}</span></button>
+                    <button class="btn btn-default btn-block" ng-disabled="slc.Value == null" ng-click="editLanguageKey(slc,languageForEdit)"><span class="mif-plus"> {{translation.Save}}</span></button>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
 
     <!--DIALOG-->
     <div data-role="dialog" id="deleteDialog" class="text-center dialog alert" data-windows-style="true" data-close-button="true" data-type="alert">
-        <h1 style="text-align: left">{{translation.RemovingLanguage}} {{languageForEdit.languageName}}</h1>
+        <h1 style="text-align: left">{{translation.RemovingLanguage}} {{languageForEdit.LanguageName}}</h1>
         <div class="text-center margin10">
             {{translation.RemovingLanguageDialog}}
         </div>
