--- a/WebBellwether.Web/app/integrationGames/gameFeatureManagement.html
+++ b/WebBellwether.Web/app/integrationGames/gameFeatureManagement.html
@@ -26,7 +26,11 @@
             </div>
             <!--TRANSLATE-->
             <div class="margin10" ng-hide="gameFeatures[0].GameFeatureTemplateName == null">
-                <button ng-disabled ="required1.val1 == null" ng-click="translateGameFeatures(gameFeature.Language,gameFeatures)" class="btn btn-primary"><span class="mif-cloud-download mif-2x">{{translation.Translate}}</span></button>
+                <button ng-disabled="required1.val1 == null" ng-click="translateGameFeatures(gameFeature.Language,gameFeatures)" class="btn btn-primary"><span class="mif-cloud-download mif-2x">{{translation.Translate}}</span></button>
+            </div>
+            <!--SAVE ALL GAME FEATURES-->
+            <div class="margin10">
+                <button ng-click="saveAllGameFeatures()" class="btn btn-danger" ng-disabled="required1.val1 == null">{{translation.SaveAll}}</button>
             </div>
             <div ng-repeat="gameFeature in gameFeatures" class="formAni">
                 <div class="form-inline">
@@ -62,13 +66,17 @@
                 </div>
             </div>
             <!--TRANSLATE-->
-            <div class="margin10" ng-hide ="gameFeatureDetails[0].GameFeatureDetailTemplateName == null">
-                <button ng-disabled ="required2.val1 == null" ng-click="translateGameFeaturesDetails(gameFeature.Language,gameFeatureDetails)" class="btn btn-primary"><span class="mif-cloud-download mif-2x">{{translation.Translate}}</span></button>
+            <div class="margin10" ng-hide="gameFeatureDetails[0].GameFeatureDetailTemplateName == null">
+                <button ng-disabled="required2.val1 == null" ng-click="translateGameFeaturesDetails(gameFeature.Language,gameFeatureDetails)" class="btn btn-primary"><span class="mif-cloud-download mif-2x">{{translation.Translate}}</span></button>
+            </div>
+            <!--SAVE ALL GAME FEATUERS DETAILS-->
+            <div class="margin10">
+                <button ng-click="saveAllGameFeatureDetails()" class="btn btn-danger" ng-disabled="required2.val1 == null">{{translation.SaveAll}}</button>
             </div>
             <div class="formAni" ng-show="gameFeature.FeatureId > 0" ng-repeat="gameFeatureDetail in gameFeatureDetails | filter:{GameFeatureId : gameFeature.FeatureId} ">
                 <div class="form-inline">
                     <form style="float: left" class="form-group" name="gfdForm{{gameFeatureDetail.Id}}" novalidate ng-submit="editGameFeatureDetail(gameFeatureDetail)">
-                        <input ng-class="getClass(0,gameFeatureDetail.Id)" ng-disabled="!gameFeatureDetail.GameFeatureDetailName.length || required2.val1 == null" type="text" class="form-control myFormColor" required data-ng-model="gameFeatureDetail.GameFeatureDetailName" />
+                        <input ng-class="getClass(0,gameFeatureDetail.Id)" ng-disabled="required2.val1 == null" type="text" class="form-control myFormColor" required data-ng-model="gameFeatureDetail.GameFeatureDetailName" />
                         <button class="btn btn-danger" ng-disabled="gfdForm{{gameFeatureDetail.Id}}.$invalid || !gameFeatureDetail.GameFeatureDetailName.length || required2.val1 == null">{{translation.Save}}</button>
                         <label ng-hide="gameFeatureDetail.GameFeatureDetailTemplateName == null">
                             {{gameFeatureDetail.GameFeatureDetailTemplateName}}
